--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cloud_firestore: ^4.13.3
   firebase_auth: ^4.15.0
   firebase_core: ^2.24.0
+  firebase_messaging: ^14.7.10
   flutter:
     sdk: flutter
   get: ^4.6.6
