--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.13.3
+  firebase_analytics: ^10.8.1
   firebase_auth: ^4.15.0
   firebase_core: ^2.24.0
   firebase_messaging: ^14.7.10
@@ -15,13 +16,14 @@ dependencies:
     sdk: flutter
   get: ^4.6.6
   get_it: ^7.6.4
+  http: ^1.2.0
   intl: ^0.19.0
   qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
