--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "java.configuration.updateBuildConfiguration": "interactive",
   "editor.codeActionsOnSave": {
     "source.fixAll": "explicit"
-  }
+  },
+  "java.compile.nullAnalysis.mode": "automatic"
 }
