--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ environment:
   sdk: '>=3.2.1 <4.0.0'
 
 dependencies:
-  cloud_firestore: ^4.13.3
-  firebase_auth: ^4.15.0
-  firebase_core: ^2.24.0
-  firebase_messaging: ^14.7.10
+  cloud_firestore: ^5.1.0
+  firebase_auth: ^5.1.2
+  firebase_core: ^3.2.0
+  firebase_messaging: ^15.0.3
   flutter:
     sdk: flutter
   get: ^4.6.6
@@ -18,14 +18,17 @@ dependencies:
   http: ^1.2.0
   intl: ^0.19.0
   qr_code_scanner: ^1.0.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
   assets:
     - assets/
     - assets/images/
+    - assets/data/
+    - assets/data/video/
